--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset = "UTF-8">
         <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
-        <link href = "visual.css" rel = "stylesheet" >
+        <link href = "style.css" rel = "stylesheet" >
         <title> Интеллектуальные системы обработки информации и управления</title>
     </head>
     <body>
