--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
             <header>
 
                 <h1>Профиль: Интеллектуальные системы обработки информации и управления</h1>
-            </header>
 
         <section>
             <h2>09.03.01 Информатика и вычислительная техника</h2>
-        <div>
+        <div class>
             В течение четырёх лет студенты приобретут теоретические и практические навыки в области системных исследований объектов автоматизации, освоят этапы создания и проектирования таких систем, научатся обрабатывать информацию. Фундаментальные знания в области физики помогут будущим IT-специалистам решать задачи по информатизации и автоматизации различных объектов.
         </div>
     </section>
-        
+    </header>
+
         <section>
             <header>
             <h3>
                 Вы будете изучать:
             </h3>
-            </header>
            <div>
             Фундаментальные знания в области физики и разработки программного обеспечения, в том числе и для управления физическими объектами, аналитики данных, технологии программирования и знание интеллектуальных систем позволяют выпускникам работать в различных сферах.
             </div>
-        
+        </header>
+
     </section>
         <section>
             <header>
