--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <body>
         <main>
             <header>
-
-                <h1>Профиль: Интеллектуальные системы обработки информации и управления</h1>
-
+               <section>
+                    <h1>Профиль: Интеллектуальные системы обработки информации и управления</h1>
+                </section>
         <section>
             <h2>09.03.01 Информатика и вычислительная техника</h2>
         <div class>
